[project]
name = "test"
version = "0.1"
description = "my test repo"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Roy J. Wignarajah"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/rjwignar/test"
Changelog = "https://github.com/rjwignar/test/releases"
Issues = "https://github.com/rjwignar/test/issues"
CI = "https://github.com/rjwignar/test/actions"


[project.optional-dependencies]
test = ["pytest"]
